--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>index site</title>
-</head>
-<body>
-<h1>homesite</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %} Index Site {% endblock %}
+
+{% block content %}
+    Content of the Index Page
+{% endblock %}
