--- a/templates/base.html
+++ b/templates/base.html
@@ -5,79 +5,78 @@
 {% load static %}
 
 
-    {# Make modifiable head elements #}
-    <head>
-        <title>{% block title %}Home {% endblock title %} </title>
+{# Make modifiable head elements #}
+<head>
+    <title>{% block title %} UyA - Upcylcle your Art {% endblock title %} </title>
 
-                <link href="{% static "css/app.css" %}" rel="stylesheet" media="screen">
-                <link href="{% static "css/bootstrap.min.css" %}" rel = "stylesheet" media="screen">
-                <link href="{% static "css/bootstrap-theme.min.css" %}" rel = "stylesheet" media="screen">
-                <script src="{% static "js/bootstrap.min.js" %}"></script>
-    </head>
+    <link href="{% static "css/app.css" %}" rel="stylesheet" media="screen">
+    <!--Import Google Icon Font-->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="{% static "css/materialize.min.css" %}" media="screen,projection"/>
 
+    <link type="text/css" rel="stylesheet" href="{% static "css/style.css" %}">
+
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+</head>
 
 
 <body>
-    {# Navigation Menu #}
-    <header>
-        <div class="navbar navbar-default navbar-static-top
-        {% block nav-style %}{% endblock %}">
-            <div class="container p-none">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle"
-                            data-toggle="collapse"
-                            data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="/">Kunst</a>
-                </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="http://localhost:8000/images"> Images</a> </li>
-                        <li><a href="http://localhost:8000/upload"> Upload</a> </li>
-                        {% if user.is_authenticated %}
-                            <li><a href="/logout">Logout</a></li>
-                            <li><a href=""
-                                   class="p-r-none">Accounts</a></li>
-                        {% else %}
-                            <li><a href="http://localhost:8000/login/">Login</a></li>
-                            <li><a href="" class="p-r-none">Sign Up</a></li>
-                        {% endif %}
 
-                    </ul>
-                </div>
+
+<nav class="white" role="navigation">
+    <div class="nav-wrapper container">
+        <a id="logo-container" href="{% url 'index' %}" class="brand-logo center">UyA - Upcycle your Art</a>
+        <ul class="right hide-on-med-and-down">
+            <li><a href="{% url 'upload' %}">Upload</a></li>
+            <li><a href="{% url 'images' %}">Images</a></li>
+            {% if user.is_authenticated %}
+                <li><a href="{% url 'images' %}">My Images</a></li>
+                <li><a href="{% url 'logout' %}">Logout</a></li>
+            {% else %}
+                <li><a href="{% url 'login' %}">Login</a></li>
+                <li><a href="{% url 'register' %}">Register</a></li>
+            {% endif %}
+
+        </ul>
+
+        <ul id="nav-mobile" class="side-nav">
+            <li><a href="{% url 'upload' %}">Upload</a></li>
+            <li><a href="{% url 'images' %}">Images</a></li>
+        </ul>
+        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+    </div>
+</nav>
+
+    {% block content %}
+
+        if you see this something is wrong
+
+    {% endblock %}
+
+<footer class="page-footer teal">
+    <div class="container">
+        <div class="row">
+            <div class="col l12 s12 center">
+                <h5 class="white-text">Kunstprojekt von Johannes Laute</h5>
+                <p class="grey-text text-lighten-4">All rights reserved.</p>
+
+
             </div>
+
         </div>
-    </header>
-    {# The Document Body #}
-    <div id="site-wrapper">
-        {% block content %}
-            if you see this, something is wrong!
-        {% endblock content %}
     </div>
-    {# The Footer #}
-    <div class="footer">
+    <div class="footer-copyright">
         <div class="container">
-            <p>Eine Seite von Johannes Laute</p>
+            Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
         </div>
     </div>
+</footer>
+
+
+<script type="text/javascript" src="{% static "js/jquery-3.1.1.min.js" %} "></script>
+<script type="text/javascript" src="{% static "js/materialize.min.js" %} "></script>
+<script type="text/javascript" src="{% static "js/init.js" %}"></script>
 </body>
-
-
-
-
-
-
- {# Set of blocks that can be used to display JavaScript files #}
-    {% block footer_javascript %}
-        {% block footer_javascript_site %}
-            <script src="{{ STATIC_URL }}js/jquery.min.js"></script>
-            <script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
-            <script src="{{ STATIC_URL }}js/app.js"></script>
-        {% endblock footer_javascript_site %}
-        {% block footer_javascript_section %}{% endblock footer_javascript_section %}
-        {% block footer_javascript_page %}{% endblock footer_javascript_page %}
-    {% endblock footer_javascript %}
 </html>
