--- a/templates/images.html
+++ b/templates/images.html
@@ -1,19 +1,53 @@
 {% extends 'base.html' %}
 
 
-{%  block content %}
-{% for image in images %}
-    <div class="row">
+{% block content %}
+    {% for image in images %}
 
-    <img src="{{   image.originalImage.file.url }}"> </img>
+        <div class="row">
+            <div class="col s4 push-s2">
+                <div class="card">
+                    <div class="card-image">
+                        <img class="materialboxed" src="{{ image.originalImage.file.url }}">
+                    </div>
+                    <div class="card-content">
+                        <p>{{ image.originalImage.userDescription }}</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col s4 push-s2">
+                <div class="card">
+                    <div class="card-image">
+                        <img class="materialboxed" src="{{ image.file.url }}">
+                    </div>
+                    <div class="card-content">
+                        <p>{{ image.userDescription }}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    <img src="{{   image.file.url  }}"> </img>
+    {% endfor %}
+
+    <script type="text/javascript">
 
 
+    function checkIfChanged(currentCount) {
+        renderCount = {{ renderCount }};
 
-    </div>
+        console.log("renderCount: ", renderCount);
+        console.log("currentCount:", currentCount);
+        if(currentCount != renderCount) {
+            location.reload(true);
+        }
 
-{% endfor %}
+    }
 
+    setInterval(function(renderCount) {
+        $.getJSON(url = "{% url 'currentcount' %}", function( data ) {
+            checkIfChanged(data.currentCount);
+        });
+}, 5000);
 
+    </script>
 {% endblock %}
