--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,24 +1,33 @@
 {% extends "base.html" %}
 
+
+
 {% block content %}
-    {% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
-    {% endif %}
+    <div class="container">
+        <form method="post" action="{% url 'login' %}">
+            {% csrf_token %}
 
-    <form method="post" action="{% url 'login' %}">
-    {% csrf_token %}
-        <table>
-        <tr>
-            <td>{{ form.username.label_tag }}</td>
-            <td>{{ form.username }}</td>
-        </tr>
-        <tr>
-            <td>{{ form.password.label_tag }}</td>
-            <td>{{ form.password }}</td>
-        </tr>
-        </table>
+            <div class="row">
+                <div class="input-field col s4 push-s4 center">
 
-        <input type="submit" value="login" />
-        <input type="hidden" name="next" value="{{ next }}" />
-    </form>
+                    <input type="text" id="id_username" name="username" >
+                    <label for="id_username">Username</label>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="input-field col s4 push-s4">
+                    <input type="password" id="id_password" name="password" >
+                    <label for="id_password">Password</label>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="input-field col s4 push-s4">
+                    <input type="submit" class="btn" value="login"/>
+                </div>
+            </div>
+
+        </form>
+    </div>
 {% endblock %}
