--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -9,21 +9,21 @@
 
         <div class="row">
             <div class="input-field col s4 push-s4 center">
-                <input type="text" id="id_username" name="username">
+                <input type="text" id="id_username" name="username" required>
                 <label for="id_username">Username</label>
             </div>
         </div>
 
         <div class="row">
             <div class="input-field col s4 push-s4 center">
-                <input type="text" id="id_email" name="email">
+                <input type="text" id="id_email" name="email" required>
                 <label for="id_email">Email</label>
             </div>
         </div>
 
         <div class="row">
             <div class="input-field col s4 push-s4 center">
-                <input type="password" id="id_password" name="password">
+                <input type="password" id="id_password" name="password" required>
                 <label for="id_password">Password</label>
             </div>
         </div>
