--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -10,14 +10,14 @@
             <div class="row">
                 <div class="input-field col s4 push-s4 center">
 
-                    <input type="text" id="id_username" name="username" >
+                    <input type="text" id="id_username" name="username" required>
                     <label for="id_username">Username</label>
                 </div>
             </div>
 
             <div class="row">
                 <div class="input-field col s4 push-s4">
-                    <input type="password" id="id_password" name="password" >
+                    <input type="password" id="id_password" name="password" required>
                     <label for="id_password">Password</label>
                 </div>
             </div>
