--- a/templates/base.html
+++ b/templates/base.html
@@ -42,8 +42,15 @@
         </ul>
 
         <ul id="nav-mobile" class="side-nav">
-            <li><a href="{% url 'upload' %}">Upload</a></li>
+             <li><a href="{% url 'upload' %}">Upload</a></li>
             <li><a href="{% url 'images_public' %}">Images</a></li>
+            {% if user.is_authenticated %}
+                <li><a href="{% url 'images_private' %}">My Images</a></li>
+                <li><a href="{% url 'logout' %}">Logout</a></li>
+            {% else %}
+                <li><a href="{% url 'login' %}">Login</a></li>
+                <li><a href="{% url 'register' %}">Register</a></li>
+            {% endif %}
         </ul>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
