--- a/templates/image_detail.html
+++ b/templates/image_detail.html
@@ -2,6 +2,7 @@
 
 
 {% block  content %}
+    <br> <br>
 
     <div class="row">
         <div class="col s4 push-s2 center">
@@ -32,6 +33,7 @@
 
 
     <form method="POST" class="col s12">
+                    {% csrf_token %}
 
         <div class="row">
             <div class="input-field col s4 push-s4 center">
@@ -48,7 +50,7 @@
                 <select id="id_style" name="style"  required>
                 <option value="" disabled selected>Choose your Style</option>
                     {% for style in styles %}
-                        <option value="{{ style.id }}">{{ style.name }}</option>
+                        <option data-icon="{{ style.image.url }}" class="circle" value="{{ style.id }}">{{ style.name }}</option>
                     {% endfor %}
                 </select>
             </div>
